# xfce4-systemload-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt
data/icons/32x32/: Makefile.am
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  Makefile.in  cpu.c  cpu.cc  cpu.h  memswap.c  memswap.cc  memswap.h  meson.build  network.c  network.cc  network.h  plugin.c  plugin.h  settings.c  settings.cc  settings.h  systemload.c  systemload.cc  systemload.desktop.in  systemload.desktop.in.in  uptime.c  uptime.cc  uptime.h
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.gmo  ca.po  cs.po  da.po  de.gmo  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.gmo  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.gmo  lt.po  lv.po  ms.po  nb.po  (+26 more)
xfce4++/: Makefile.am  util.h
xfce4++/util/: Makefile.am  fixes.h
